[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pi05-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.7.1",
    "logging>=0.4.9.6",
    "mlx>=0.31.1",
    "mlx-lm>=0.31.1",
    "mlx-vlm>=0.4.0",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "torch>=2.10.0",
]
